# aws-lambda-rdbms-integration

./: NOTICE.txt  README.md
mysql/: README_MYSQL.md
mysql/sql/: awslambda_ddl.sql
mysql/src/: CMakeLists.txt  LambdaInvoke.cpp  awslambda_fn.cpp
oracle/: pom.xml
oracle/sql/: awslambda_ddl.sql  permissions.sql
oracle/src/main/java/com/amazonaws/rdbmsinteg/: LambdaInvoke.java
postgresql/sql/: awslambda_ddl.sql
samples/: lambdaReadKinesisStream.py  lambdaTempReadingTrigger-Cloudwatch.py  lambdaTempReadingTrigger-Firehose.py  lambdaTest.py  ora_temp_reading_table.sql  ora_temp_reading_trigger.sql  pg_processSensorReadings.sql  rs_temp_reading_table.sql
